# fluent-stf-rsp

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.enclave  Makefile  README.md  abc.sh  data_key.enc  docker-compose.e2e.yml  docker-compose.yml  flake.nix  log.txt  public_key.hex  rsp-client-enclave-mainnet.eif.pcrs.json  rsp-client-enclave-testnet.eif.pcrs.json
.github/workflows/: cycle-tracking.yml  pr.yml
crates/batch-merkle/: Cargo.toml
crates/batch-merkle/src/: lib.rs
crates/blob-builder/: Cargo.toml
crates/blob-builder/src/: bridge_events.rs  header.rs  lib.rs
crates/e2e-tests/: Cargo.toml
crates/e2e-tests/contracts/: MockRollup.sol
crates/e2e-tests/src/: blob_builder.rs  fake_beacon.rs  lib.rs  mock_l1.rs
crates/e2e-tests/tests/: full_pipeline.rs
crates/executor/client/: Cargo.toml
crates/executor/client/src/: custom.rs  error.rs  events_hash.rs  evm.rs  executor.rs  into_primitives.rs  io.rs  key.rs  lib.rs  nitro.rs  withdrawal_event_hash.rs
crates/executor/client/src/tracking/: block_executor.rs
crates/executor/host/: Cargo.toml
crates/executor/host/src/: error.rs  events_hash.rs  executor_components.rs  full_executor.rs  hooks.rs  host_executor.rs  lib.rs
crates/executor/host/tests/: integration.rs
crates/l1-rollup-client/: Cargo.toml
crates/l1-rollup-client/src/: lib.rs  nitro_verifier.rs
crates/mpt/src/: lib.rs  mpt.rs
crates/nitro-types/: Cargo.toml
crates/nitro-types/src/: lib.rs
crates/primitives/: Cargo.toml  build.rs
crates/primitives/src/: chain_spec.rs  fluent_genesis.rs  genesis.rs  lib.rs
crates/provider/: Cargo.toml
crates/provider/src/: lib.rs
crates/storage/rpc-db/: Cargo.toml
crates/storage/rpc-db/src/: basic.rs  error.rs  execution_witness.rs  exex.rs  lib.rs
crates/witness-orchestrator/: Cargo.toml  build.rs
crates/witness-orchestrator/src/: hub.rs  lib.rs  server.rs  types.rs
docker/: nitro-builder.Dockerfile
scripts/: build_enclave_in_container.sh  check_version_bump.py  test_mock_sp1.py  update_expected_pcr0.py  update_readme_vkeys.py
