[workspace]
members = [
    "bin/host",
    "bin/eth-proofs",
    "crates/executor/client",
    "crates/executor/host",
    "crates/mpt",
    "crates/primitives",
    "crates/provider",
    "crates/storage/rpc-db",
    "crates/storage/witness-db",
    "bin/aws-nitro-validator/script",
    "bin/aws-nitro-validator/program",
    "bin/proxy",
]
exclude = []
resolver = "2"

[workspace.features]
default = []
sp1 = ["rsp-host-executor/sp1"]
nitro = ["rsp-host-executor/nitro"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["puma314", "jtguibas", "rkrasiuk"]
repository = "https://github.com/moongate-forks/minimal-reth"
homepage = "https://github.com/moongate-forks/minimal-reth"
exclude = ["**/target"]
version = "0.1.0"

[workspace.dependencies]
tracing = { version = "0.1.40", default-features = false }
cfg-if = "1.0.0"
spin = { version = "0.9.8", features = ["mutex"] }
async-trait = "0.1.80"
tokio = { version = "1.21", default-features = false, features = [
    "rt",
    "rt-multi-thread",
] }
reqwest = "0.12.9"
serde_json = "1.0.94"
serde = { version = "1.0", default-features = false, features = ["derive"] }
futures = "0.3"
url = "2.3"
thiserror = "1.0.61"
hex-literal = "0.4.1"
rayon = "1.10.0"
rlp = "0.5.2"

# workspace
rsp-rpc-db = { path = "./crates/storage/rpc-db" }
rsp-witness-db = { path = "./crates/storage/witness-db" }
rsp-client-executor = { path = "./crates/executor/client" }
rsp-host-executor = { path = "./crates/executor/host", default-features = false }
rsp-mpt = { path = "./crates/mpt" }
rsp-primitives = { path = "./crates/primitives" }
rsp-provider = { path = "./crates/provider" }


# sp1
sp1-build = "5.1.0"
sp1-core-executor = { version = "5.1.0", features = ["bigint-rug"] }
sp1-prover = "5.1.0"
sp1-sdk = "5.1.0"

reth-primitives = { git = "https://github.com/fluentlabs-xyz/reth", branch = "djadjka/stf", default-features = false, features = ["alloy-compat", "std"] }
reth-primitives-traits = { git = "https://github.com/fluentlabs-xyz/reth", branch = "djadjka/stf", features = ["serde", "serde-bincode-compat"], default-features = false }
reth-consensus = { git = "https://github.com/fluentlabs-xyz/reth", branch = "djadjka/stf", default-features = false }
reth-ethereum-consensus = { git = "https://github.com/fluentlabs-xyz/reth", branch = "djadjka/stf", default-features = false }
reth-optimism-consensus = { git = "https://github.com/fluentlabs-xyz/reth", branch = "djadjka/stf", default-features = false }
reth-consensus-common = { git = "https://github.com/fluentlabs-xyz/reth", branch = "djadjka/stf", default-features = false }
reth-evm = { git = "https://github.com/fluentlabs-xyz/reth", branch = "djadjka/stf", default-features = false }
reth-evm-ethereum = { git = "https://github.com/fluentlabs-xyz/reth", branch = "djadjka/stf", default-features = false }
reth-storage-errors = { git = "https://github.com/fluentlabs-xyz/reth", branch = "djadjka/stf", default-features = false }
reth-trie = { git = "https://github.com/fluentlabs-xyz/reth", branch = "djadjka/stf", default-features = false }
reth-chainspec = { git = "https://github.com/fluentlabs-xyz/reth", branch = "djadjka/stf", features = ["std"], default-features = false }
reth-execution-types = { git = "https://github.com/fluentlabs-xyz/reth", branch = "djadjka/stf", default-features = false }
reth-errors = { git = "https://github.com/fluentlabs-xyz/reth", branch = "djadjka/stf", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/fluentlabs-xyz/reth", branch = "djadjka/stf", features = ["serde"], default-features = false }
reth-optimism-forks = { git = "https://github.com/fluentlabs-xyz/reth", branch = "djadjka/stf", default-features = false }

revm = { version = "34.0.0", default-features = false }
revm-primitives = { version = "22.0.0", default-features = false }
revm-bytecode = { version = "8.0.0", default-features = false }
revm-database = { version = "10.0.0", default-features = false }
revm-database-interface = { version = "9.0.0", default-features = false }
revm-state = { version = "9.0.0", default-features = false }

derive_more = { version = "2.0.1", features = ["full"] }
# alloy
alloy-chains = { version = "0.2.5", default-features = false }
alloy-evm = { version = "0.26.3", default-features = false, features = ["std"] }
alloy-primitives = { version = "1.3.0", default-features = false, features = ["sha3-keccak", "map-foldhash"] }
alloy-provider = { version = "1.0.23", default-features = false, features = [
    "reqwest",
    "reqwest-rustls-tls",
] }
alloy-rpc-types = { version = "1.0.23", default-features = false, features = [
    "eth",
] }
alloy-rpc-types-debug = { version = "1.0.23", default-features = false }

alloy-json-rpc = { version = "1.0.23", default-features = false }
alloy-genesis = { version = "1.0.23", default-features = false }
alloy-consensus = { version = "1.0.23", default-features = false, features = ["serde", "serde-bincode-compat"] }
alloy-network = { version = "1.0.23", default-features = false }
alloy-transport = { version = "1.0.23", default-features = false }
alloy-transport-http = { version = "1.0.23", features = [
    "reqwest-rustls-tls",
], default-features = false }
alloy-transport-ws = { version = "1.0.23" }
alloy-rpc-client = { version = "1.0.23", default-features = false }
alloy-eips = { version = "1.0.23", default-features = false }
alloy-serde = "1.0.23"
alloy-rlp = "0.3.10"
alloy-trie = "0.9.0"
alloy-sol-types = { version = "1.0.23", default-features = false }

# op
#alloy-op-evm = { version = "0.15", default-features = false }
op-alloy-consensus = "0.18.12"
op-alloy-network = "0.18.12"
op-alloy-rpc-types = "0.18.12"

kzg-rs = { git = "https://github.com/succinctlabs/kzg-rs" }

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"

[patch.crates-io]
# Precompile patches
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.10.9-sp1-4.0.0", package = "sha2" }
bn = { git = "https://github.com/sp1-patches/bn", tag = "patch-0.6.0-sp1-5.0.0", package = "substrate-bn" }
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-5.0.0" }
p256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-p256-13.2-sp1-5.0.0" }

revm = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
revm-bytecode = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
revm-database = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
revm-state = { package = "revm-state", git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
revm-primitives = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
revm-interpreter = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
revm-inspector = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
revm-context = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
revm-context-interface = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
revm-database-interface = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
op-revm = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
alloy-evm = { git = "https://github.com/fluentlabs-xyz/alloy-rwasm.git"}

#[patch."https://github.com/fluentlabs-xyz/fluent"]
#reth-evm = { path = "../fluent/crates/evm/evm"}

#[patch."https://github.com/fluentlabs-xyz/fluentbase"]
#fluentbase-types = { path = "../fluentbase/crates/types" }
#wasmtime = { path = "../../wasmtime/crates/wasmtime", optional = true}