[workspace]
members = [
    "bin/host",
    "bin/eth-proofs",
    "bin/continuous",       # ← was missing from members!
    "bin/proxy",
    "crates/executor/client",
    "crates/executor/host",
    "crates/mpt",
    "crates/primitives",
    "crates/provider",
    "crates/storage/rpc-db",
    "crates/storage/witness-db",
    "bin/aws-nitro-validator/script", "crates/nitro-types",
]
exclude = []
resolver = "2"

[workspace.features]
default = []
sp1 = ["rsp-host-executor/sp1"]
nitro = ["rsp-host-executor/nitro"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["puma314", "jtguibas", "rkrasiuk"]
repository = "https://github.com/moongate-forks/minimal-reth"
homepage = "https://github.com/moongate-forks/minimal-reth"
exclude = ["**/target"]

[workspace.dependencies]
# --- std utils ---
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
cfg-if = "1.0.0"
spin = { version = "0.9.8", features = ["mutex"] }
async-trait = "0.1.80"
tokio = { version = "1.21", default-features = false, features = ["rt", "rt-multi-thread"] }
reqwest = "0.12.9"
serde_json = "1.0.94"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_with = "3.12.0"
futures = "0.3"
url = "2.3"
thiserror = "1.0.61"
anyhow = "1.0"
eyre = "0.6.12"
hex = "0.4"
hex-literal = "0.4.1"
base64 = "0.22.1"
rayon = "1.10.0"
rlp = "0.5.2"
itertools = "0.13.0"
bincode = "1.3.3"
either = "1.13.0"
clap = { version = "4.5.7", features = ["derive", "env"] }
dotenv = "0.15.0"
strum = "0.26"
csv = "1.1"
axum = "0.8.8"
vsock = "0.5.2"
derive_more = { version = "2.0.1", features = ["full"] }

# --- workspace crates ---
rsp-rpc-db = { path = "./crates/storage/rpc-db" }
rsp-witness-db = { path = "./crates/storage/witness-db" }
rsp-client-executor = { path = "./crates/executor/client" }
rsp-host-executor = { path = "./crates/executor/host", default-features = false }
rsp-mpt = { path = "./crates/mpt" }
rsp-primitives = { path = "./crates/primitives" }
rsp-provider = { path = "./crates/provider" }
nitro-types = { path = "./crates/nitro-types" }

# --- sp1 ---
sp1-build = "6.0.1"
sp1-helper = "6.0.1"
sp1-core-executor = { version = "6.0.1", features = ["bigint-rug"] }
sp1-prover = "6.0.1"
sp1-sdk = "6.0.1"

# --- reth ---
reth-primitives = { git = "https://github.com/fluentlabs-xyz/reth", default-features = false, features = ["alloy-compat", "std"], branch = "v1.11-patched" }
reth-primitives-traits = { git = "https://github.com/fluentlabs-xyz/reth", default-features = false, features = ["serde", "serde-bincode-compat"], branch = "v1.11-patched" }
reth-consensus = { git = "https://github.com/fluentlabs-xyz/reth", default-features = false, branch = "v1.11-patched" }
reth-ethereum-consensus = { git = "https://github.com/fluentlabs-xyz/reth", default-features = false, branch = "v1.11-patched" }
reth-optimism-consensus = { git = "https://github.com/fluentlabs-xyz/reth", default-features = false, branch = "v1.11-patched" }
reth-consensus-common = { git = "https://github.com/fluentlabs-xyz/reth", default-features = false, branch = "v1.11-patched" }
reth-evm = { git = "https://github.com/fluentlabs-xyz/reth", default-features = false, branch = "v1.11-patched" }
reth-evm-ethereum = { git = "https://github.com/fluentlabs-xyz/reth", default-features = false, branch = "v1.11-patched" }
reth-storage-errors = { git = "https://github.com/fluentlabs-xyz/reth", default-features = false, branch = "v1.11-patched" }
reth-trie = { git = "https://github.com/fluentlabs-xyz/reth", default-features = false, branch = "v1.11-patched" }
reth-chainspec = { git = "https://github.com/fluentlabs-xyz/reth", default-features = false, features = ["std"], branch = "v1.11-patched" }
reth-execution-types = { git = "https://github.com/fluentlabs-xyz/reth", default-features = false, branch = "v1.11-patched" }
reth-errors = { git = "https://github.com/fluentlabs-xyz/reth", default-features = false, branch = "v1.11-patched" }
reth-ethereum-primitives = { git = "https://github.com/fluentlabs-xyz/reth", default-features = false, features = ["serde"], branch = "v1.11-patched" }
reth-optimism-forks = { git = "https://github.com/fluentlabs-xyz/reth", default-features = false, branch = "v1.11-patched" }

# --- revm ---
revm = { version = "34.0.0", default-features = false }
revm-primitives = { version = "22.0.0", default-features = false }
revm-bytecode = { version = "8.0.0", default-features = false }
revm-database = { version = "10.0.0", default-features = false }
revm-database-interface = { version = "9.0.0", default-features = false }
revm-state = { version = "9.0.0", default-features = false }
revm-interpreter = { version = "18.0.0", default-features = false }
revm-inspector = { version = "9.0.0", default-features = false }
revm-context = { version = "9.0.0", default-features = false }
revm-context-interface = { version = "9.0.0", default-features = false }
op-revm = { version = "9.0.0", default-features = false }

# --- alloy ---
alloy-chains = { version = "0.2.5", default-features = false }
alloy-evm = { version = "0.27.2", default-features = false }
alloy-primitives = { version = "1.3.0", default-features = false, features = ["sha3-keccak", "map-foldhash"] }
alloy-provider = { version = "1.0.23", default-features = false, features = ["reqwest", "reqwest-rustls-tls"] }
alloy-rpc-types = { version = "1.0.23", default-features = false, features = ["eth"] }
alloy-rpc-types-debug = { version = "1.0.23", default-features = false }
alloy-json-rpc = { version = "1.0.23", default-features = false }
alloy-genesis = { version = "1.0.23", default-features = false }
alloy-consensus = { version = "1.0.23", default-features = false, features = ["serde", "serde-bincode-compat"] }
alloy-network = { version = "1.0.23", default-features = false }
alloy-transport = { version = "1.0.23", default-features = false }
alloy-transport-http = { version = "1.0.23", default-features = false, features = ["reqwest-rustls-tls"] }
alloy-transport-ws = { version = "1.0.23" }
alloy-rpc-client = { version = "1.0.23", default-features = false }
alloy-eips = { version = "1.0.23", default-features = false }
alloy-serde = "1.0.23"
alloy-rlp = "0.3.10"
alloy-trie = "0.9.0"
alloy-sol-types = { version = "1.0.23", default-features = false, features = ["json"] }

# --- op ---
op-alloy-consensus = "0.18.12"
op-alloy-network = "0.18.12"
op-alloy-rpc-types = "0.18.12"

kzg-rs = { git = "https://github.com/succinctlabs/kzg-rs" }

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"

# ─── patches (single source of truth) ────────────────────────────────────────
[patch.crates-io]
# sp1 precompile patches
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.10.9-sp1-4.0.0", package = "sha2" }
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
bn = { git = "https://github.com/sp1-patches/bn", tag = "patch-0.6.0-sp1-5.0.0", package = "substrate-bn" }
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-5.0.0" }
p256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-p256-13.2-sp1-5.0.0" }
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", tag = "patch-0.30.0-sp1-5.0.0" }

# revm patches
revm = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
revm-bytecode = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
revm-database = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
revm-state = { package = "revm-state", git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
revm-primitives = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
revm-interpreter = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
revm-inspector = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
revm-context = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
revm-context-interface = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
revm-database-interface = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
op-revm = { git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched" }
