[package]
name = "rsp-blob-builder"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
mainnet = ["fluent-stf-primitives/mainnet"]
testnet = ["fluent-stf-primitives/testnet"]
devnet  = ["fluent-stf-primitives/devnet"]

[dependencies]
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
brotlic.workspace = true
eyre.workspace = true
fluent-stf-primitives = { workspace = true, default-features = false }
futures.workspace = true
tokio.workspace = true
tracing.workspace = true
