[package]
name = "l1-rollup-client"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-sol-types.workspace = true
eyre.workspace = true
tokio.workspace = true
tracing.workspace = true
