[package]
name = "nitro-types"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true

[dependencies]
revm-primitives.workspace = true
serde = { workspace = true,  features = ["derive", "alloc"] }
alloy-primitives = { version = "1.3.0", default-features = false, features = ["serde"] }
rsp-client-executor.workspace = true

[lints]
workspace = true
