[package]
name = "rsp-primitives"
description = ""
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default=["devnet"]
devnet=[]
testnet=[]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
serde_with.workspace = true

# reth
reth-primitives-traits.workspace = true
reth-chainspec.workspace = true
reth-trie.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-eips.workspace = true
alloy-genesis.workspace = true
alloy-rpc-types.workspace = true
alloy-serde.workspace = true

[dev-dependencies]
bincode.workspace = true

[build-dependencies]
alloy-primitives = { workspace = true, features = [] }
serde_json = "1"
hex = "0.4"
alloy-genesis.workspace = true
reth-chainspec.workspace = true
reth-primitives.workspace = true