[package]
name = "fluent-stf-primitives"
description = "Fluent STF primitives (genesis, account proofs)"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["mainnet"]
mainnet = []
testnet = []
devnet  = []

[dependencies]
# reth
reth-primitives-traits.workspace = true
reth-chainspec.workspace = true
reth-trie.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-genesis.workspace = true
alloy-rpc-types.workspace = true

[build-dependencies]
alloy-primitives = { workspace = true, features = [] }
serde_json = "1"
hex = "0.4"
alloy-genesis.workspace = true
reth-chainspec.workspace = true
reth-primitives.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
directories = "6.0.0"
flate2 = "1.1.9"