[package]
name = "witness-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "gRPC witness transport layer for Fluent zkVM proving pipeline"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
serde.workspace = true
bincode.workspace = true
prost.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tracing.workspace = true
zstd.workspace = true
redb.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
nitro-types.workspace = true

[build-dependencies]
tonic-prost-build = "0.14.5"

[lints]
workspace = true
