[package]
name = "rsp-client-executor"
description = ""
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
sp1 = []
nitro = ["fluentbase-revm/wasmtime"]
wasmtime = ["fluentbase-revm/wasmtime"]

[dependencies]
thiserror.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_with.workspace = true
itertools.workspace = true
bincode.workspace = true

# workspace crates
rsp-mpt.workspace = true
rsp-primitives.workspace = true

# reth
reth-consensus.workspace = true
reth-ethereum-consensus.workspace = true
reth-consensus-common.workspace = true
reth-ethereum-primitives = { workspace = true, features = ["serde-bincode-compat"] }
reth-execution-types.workspace = true
reth-primitives-traits.workspace = true
reth-trie.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-errors.workspace = true
reth-chainspec.workspace = true

# revm
revm.workspace = true
revm-primitives = { workspace = true, features = ["serde"] }
kzg-rs.workspace = true

# alloy
alloy-evm.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-network.workspace = true
alloy-rpc-types.workspace = true
alloy-sol-types.workspace = true

fluentbase-revm = { git = "https://github.com/fluentlabs-xyz/fluentbase", branch = "devel", default-features = false, features = ["std"]}