[package]
name = "rsp-client-executor"
description = ""
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["mainnet"]
sp1 = []
nitro = []
wasmtime = ["fluentbase-revm/wasmtime"]
mainnet = ["fluent-stf-primitives/mainnet"]
testnet = ["fluent-stf-primitives/testnet"]
devnet  = ["fluent-stf-primitives/devnet"]

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_with.workspace = true
itertools.workspace = true
bincode.workspace = true

# workspace crates
rsp-mpt.workspace = true
fluent-stf-primitives = { workspace = true, default-features = false }

# reth
reth-consensus.workspace = true
reth-ethereum-consensus.workspace = true
reth-consensus-common.workspace = true
reth-ethereum-primitives = { workspace = true, features = ["serde-bincode-compat"] }
reth-execution-types.workspace = true
reth-primitives-traits.workspace = true
reth-trie.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-errors.workspace = true
reth-chainspec.workspace = true

# revm
revm.workspace = true
revm-primitives = { workspace = true, features = ["serde"] }
# alloy
alloy-evm.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-network.workspace = true
alloy-rpc-types.workspace = true
alloy-sol-types.workspace = true

fluentbase-revm = { git = "https://github.com/fluentlabs-xyz/fluentbase", branch="devel", default-features = false, features = ["std"]}
fluentbase-runtime = { git = "https://github.com/fluentlabs-xyz/fluentbase", branch="devel", default-features = false}
reth-revm.workspace = true
reth-primitives.workspace = true

