[package]
name = "rsp-host-executor"
description = ""
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true, features = ["time", "rt"] }
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
url.workspace = true
reqwest = { workspace = true, features = ["json"], optional = true }
eyre = "0.6.12"
bincode = "1.3.3"
either = "1.13.0"

# workspace
rsp-rpc-db.workspace = true
rsp-client-executor = { workspace = true }
rsp-mpt = { workspace = true }
rsp-primitives = { workspace = true, features = ["optimism"] }

# sp1
sp1-sdk.workspace = true
sp1-prover.workspace = true

# reth
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
#reth-optimism-evm = { workspace = true }
#reth-optimism-chainspec = { workspace = true }
#reth-optimism-primitives.workspace = true
reth-ethereum-primitives.workspace = true
reth-primitives-traits = { workspace = true, features = ["secp256k1"] }
reth-trie.workspace = true
reth-errors.workspace = true
reth-chainspec.workspace = true

# revm
revm.workspace = true
revm-primitives.workspace = true

# alloy
alloy-chains.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-network.workspace = true
alloy-provider.workspace = true
alloy-transport.workspace = true
alloy-rpc-types.workspace = true
base64 = "0.22.1"
serde_json.workspace = true
hex = "0.4"
vsock = { version = "0.2", optional = true }
aws-nitro-enclaves-nsm-api = { version = "0.4.0", optional = true }
serde_cbor = { version = "0.11", optional = true }
anyhow = { version = "1.0", optional = true }

# op
op-alloy-network.workspace = true

[dev-dependencies]
alloy-primitives.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true
bincode = "1.3.3"
dotenv = "0.15.0"

[features]
default = ["sp1"]
sp1 = []
alerting = ["dep:reqwest"]
execution-witness = [
    "rsp-mpt/execution-witness",
    "rsp-rpc-db/execution-witness",
]
nitro = [
    "dep:vsock",
    "dep:aws-nitro-enclaves-nsm-api",
    "dep:serde_cbor",
    "dep:anyhow",
]