[package]
name = "rsp-host-executor"
description = ""
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["sp1"]
sp1 = []
alerting = ["dep:reqwest"]
execution-witness = [
    "rsp-mpt/execution-witness",
    "rsp-rpc-db/execution-witness",
]
nitro = [
    "dep:vsock",
    "dep:anyhow",
]

[dependencies]
tokio = { workspace = true, features = ["time", "rt"] }
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
eyre.workspace = true
bincode.workspace = true
either.workspace = true
hex.workspace = true

reqwest = { workspace = true, features = ["json"], optional = true }
vsock = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

# workspace crates
rsp-rpc-db.workspace = true
rsp-client-executor = {workspace = true}
rsp-mpt.workspace = true
rsp-primitives = { workspace = true, features = ["optimism"] }

# sp1
sp1-sdk.workspace = true
sp1-prover.workspace = true

# reth
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-ethereum-primitives.workspace = true
reth-primitives-traits = { workspace = true, features = ["secp256k1"] }
reth-trie.workspace = true
reth-errors.workspace = true
reth-chainspec.workspace = true

# revm
revm.workspace = true
revm-primitives.workspace = true

# alloy
alloy-chains.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-network.workspace = true
alloy-provider.workspace = true
alloy-transport.workspace = true
alloy-rpc-types.workspace = true

[dev-dependencies]
alloy-primitives.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true
bincode.workspace = true
dotenv.workspace = true