[package]
name = "rsp-host-executor"
description = ""
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["mainnet"]
execution-witness = [
    "rsp-mpt/execution-witness",
    "rsp-rpc-db/execution-witness",
]
mainnet = ["fluent-stf-primitives/mainnet", "rsp-client-executor/mainnet"]
testnet = ["fluent-stf-primitives/testnet", "rsp-client-executor/testnet"]
devnet  = ["fluent-stf-primitives/devnet",  "rsp-client-executor/devnet"]

[dependencies]
thiserror.workspace = true
tracing.workspace = true

# workspace crates
rsp-rpc-db.workspace = true
rsp-client-executor = { workspace = true, features = ["wasmtime"] }
rsp-mpt.workspace = true
fluent-stf-primitives = { workspace = true, default-features = false }

# reth
reth-evm.workspace = true
reth-primitives-traits = { workspace = true, features = ["secp256k1"] }
reth-trie.workspace = true
reth-errors.workspace = true
reth-chainspec.workspace = true
reth-provider = { workspace = true, default-features = false }

# revm
revm.workspace = true
revm-primitives.workspace = true

# alloy
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-network.workspace = true
alloy-provider.workspace = true
alloy-transport.workspace = true
alloy-rpc-types.workspace = true

[dev-dependencies]
alloy-primitives.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true
bincode.workspace = true
dotenv.workspace = true
